[package]
name = "challenge03"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encoding = { path = "../../../crates/encoding" }
xor = { path = "../../../crates/xor" }
cryptanalysis = { path = "../../../crates/cryptanalysis" }