[package]
name = "challenge04"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encoding = { path = "../../../lib/encoding" }
primitives = { path = "../../../lib/primitives" }
cryptanalysis = { path = "../../../lib/cryptanalysis" }